feat: 제적 위험자 출력 기능 구현